jdbc and adbc test examples